# moonhatch

./: .env.anvil  .gitignore  .prettierrc  CLAUDE.md  Cargo.toml  README.md  bun.lockb  package-lock.json  package.json
backend/: Cargo.toml  diesel.toml
backend/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/migrations/2025-02-11-204131_create_coins/: down.sql  up.sql
backend/migrations/2025-02-11-222929_seed_coins/: down.sql  up.sql
backend/migrations/2025-02-14-200107_add_social_fields_to_coins/: down.sql  up.sql
backend/migrations/2025-02-17-204842_create_pools/: down.sql  up.sql
backend/migrations/2025-02-17-205812_coins_deployed_pool/: down.sql  up.sql
backend/migrations/2025-02-17-210837_pool_prices/: down.sql  up.sql
backend/migrations/2025-02-17-222929_seed_coins/: down.sql  up.sql
backend/src/: abi.rs  db.rs  db_pool.rs  main.rs  models.rs  schema.rs
contracts/: README.md  foundry.toml
contracts/abis/31337/contracts/: UniswapV2Factory.json  WETH9.json
contracts/abis/31337/interfaces/: IPumpCoin.json  UniswapV2ERC20.json  UniswapV2Pair.json
contracts/abis/5124/contracts/: PumpRand.json  UniswapV2Factory.json  UniswapV2Router02.json  WETH9.json
contracts/abis/5124/interfaces/: IPumpCoin.json  ISRC20.json
contracts/broadcast/PumpRand.s.sol/5124/: run-1740169687.json
contracts/script/: PumpRand.s.sol  SushiSwap.s.sol
contracts/src/: PumpCoin.sol  PumpRand.sol  RngLib.sol  SRC20.sol
contracts/src/dex/: README.md  SushiRoll.sol  UniswapV2ERC20.sol  UniswapV2Factory.sol  UniswapV2Pair.sol  UniswapV2Router02.sol
contracts/src/dex/interfaces/: IWETH.sol
contracts/src/dex/libraries/: TransferHelper.sol  UQ112x112.sol  UniswapV2Library.sol
contracts/src/dex/mocks/: SushiSwapFactory.sol  SushiSwapPair.sol  WETH9.sol
contracts/src/pump/: PumpCoin.sol  PumpRand.sol
contracts/src/token/: IPumpCoin.sol  ISRC20.sol  SRC20.sol  SafeSRC20.sol
contracts/test/: PumpRand.t.sol  SushiSwap.t.sol
crates/backend/: Cargo.toml
crates/backend/migrations/2025-02-17-205812_coins_deployed_pool/: down.sql  up.sql
crates/backend/migrations/2025-02-17-222929_seed_coins/: down.sql  up.sql
crates/backend/src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs  state.rs
crates/listener/: Cargo.toml
crates/listener/src/: error.rs  handler.rs  main.rs  sock.rs
crates/pump/: Cargo.toml
crates/pump/migrations/2025-02-11-204131_create_coins/: up.sql
crates/pump/migrations/2025-02-17-204842_create_pools/: up.sql
crates/pump/migrations/2025-02-20-052500_trades/: down.sql  up.sql
crates/pump/migrations/2025-02-21-222929_seed_coins/: down.sql  up.sql
crates/pump/migrations/2025-03-03-234936_hidden_coins/: down.sql  up.sql
crates/pump/src/: db_pool.rs  error.rs  lib.rs
crates/pump/src/client/: block.rs  coin.rs  contract_address.rs  factory.rs  http.rs  mod.rs  pool.rs  price.rs  pump.rs  ws.rs
crates/pump/src/contract/: coin.rs  dex.rs  factory.rs  mod.rs  pair.rs  pump.rs
crates/pump/src/db/: db.rs  mod.rs  models.rs  pool.rs  schema.rs  store.rs
crates/pump/src/error/: listener.rs  mod.rs  pump.rs
crates/server/: Cargo.toml
crates/server/src/: handlers.rs  http.rs  main.rs  sock.rs  state.rs  ws.rs
deploy/: nginx.conf  supervisor.conf
frontend/web/: README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/web/public/chains/: 31337.json
frontend/web/public/chains/31337/: PumpRand.json  UniswapV2Factory.json
frontend/web/public/chains/31337/contracts/: PumpRand.json  UniswapV2Factory.json  UniswapV2Router02.json  WETH9.json
frontend/web/public/chains/31337/interfaces/: ISRC20.json  UniswapV2ERC20.json
frontend/web/public/chains/5124/interfaces/: IPumpCoin.json
frontend/web/src/: App.tsx  Home.tsx  Providers.tsx  how-it-works.tsx  index.css  main.tsx  theme.ts  util.ts
frontend/web/src/abis/contracts/: PumpRand.json  UniswapV2Factory.json  UniswapV2Router02.json  WETH9.json
frontend/web/src/abis/interfaces/: ISRC20.json  UniswapV2ERC20.json  UniswapV2Pair.json
frontend/web/src/api/: coinAPI.ts  http.ts  websocket.ts
frontend/web/src/coins/: coin-card.tsx  social-link.tsx
frontend/web/src/components/: HomeHeader.tsx  MyStyledConnectButton.tsx  NavBar.tsx
frontend/web/src/components/chart/: Candles.tsx
frontend/web/src/components/coin/: coin-card.tsx  coin-detail-helper.tsx  coin-detail.tsx  coin-image.tsx  coin-social.tsx  pagination.tsx  social-link.tsx
frontend/web/src/components/coin-detail/: coin-desc-container.tsx  coin-detail-helper.tsx  coin-image-component.tsx  coin-info-details.tsx  trade-section.tsx
frontend/web/src/components/create/: coin-form.tsx  image-upload.tsx  ticker-input.tsx
frontend/web/src/components/home/: create-coin-button.tsx  grad-icon-container.tsx  king-of-the-hill.tsx  koth-box.tsx  search-and-filter.tsx
frontend/web/src/components/trade/: amount-input.tsx  balance-section.tsx  modal-box.tsx  modal.tsx  trade-box.tsx  trade-button.tsx  trade-buy.tsx  trade-sell.tsx  transaction-graduated.tsx  transaction-nongraduated.tsx  wei-in.tsx
frontend/web/src/contract/: address.ts  index.ts  pumpRand.json
frontend/web/src/create/: coin-form.tsx  input-field.tsx  ticker-input.tsx
frontend/web/src/hooks/: client.ts  client.tsx  mockPriceData.ts  useCoinActions.ts  useCoinSearch.ts  useContract.ts  useCreateCoin.tsx  useFetchCoin.tsx  useGetCoins.tsx  usePumpClient.ts  useTimeseries.tsx  useToastNotifications.ts
frontend/web/src/pages/: Coins.tsx  Home.tsx  HowItWorks.tsx  NavBar.tsx  NotFound.tsx  how-it-works.tsx
frontend/web/src/state/: app-state.tsx  contract.ts  create-coin.tsx  get-coins.tsx
frontend/web/src/storage/: client.tsx  persistent-state.tsx
frontend/web/src/store/: coinSlice.ts  hooks.ts  slice.ts  store.ts
frontend/web/src/store/slices/: coinSlice.ts
frontend/web/src/types/: coin.ts  contract.ts
scripts/: sync.py
