[workspace]
members = ["crates/server", "crates/listener", "crates/pump"]
resolver = "2"

[workspace.dependencies]
pump = { path = "crates/pump" }
# web
axum = { version = "0.6.20", features = ["multipart", "ws"] }
futures = "0.3.31"
futures-util = "0.3"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }

# db
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.7", features = [
    "postgres",
    "r2d2",
    "chrono",
    "numeric",
] }
r2d2 = "0.8.10"

dotenv = "0.15"
env_logger = "0.11.6"
log = "0.4"
reqwest = "0.12.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
uuid = { version = "1.15.1", features = ["v4"] }

# web3
alloy-provider = { version = "=0.8.0", features = [
    "reqwest",
    "ws",
    "trace-api",
] }
alloy-network = "0.8.0"
alloy-rpc-types-eth = "=0.8.0"
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
alloy-pubsub = "0.8"
alloy-signer-local = "0.8"
alloy-transport = "0.8"

[patch.crates-io]
# seismic-alloy-core
alloy-dyn-abi = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "77693d2" }
alloy-json-abi = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "77693d2" }
alloy-primitives = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "77693d2" }
alloy-sol-macro = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "77693d2" }
alloy-sol-macro-expander = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "77693d2" }
alloy-sol-macro-input = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "77693d2" }
alloy-sol-types = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "77693d2" }
alloy-sol-type-parser = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "77693d2" }

# seismic-alloy
alloy-consensus = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-eips = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-json-rpc = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-network = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-provider = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-pubsub = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-rpc-client = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-rpc-types-trace = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-rpc-types-eth = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-serde = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-signer = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-signer-local = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-transport = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-transport-http = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-transport-ipc = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-transport-ws = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
alloy-network-primitives = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "5344a874" }
