[package]
name = "pump-rand-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4"
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
aws-config = "0.55.0"
aws-sdk-s3 = "0.27.0"
dotenv = "0.15.0"
