[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum: enable the multipart extractor feature.
axum = { workspace = true, features = ["multipart"] }
# Tower HTTP: enable CORS support.
tower-http = { version = "0.4.4", features = ["cors"] }
# Diesel with PostgreSQL, r2d2, chrono, and numeric support.
diesel.workspace = true
r2d2.workspace = true
# BigDecimal and Chrono with serde support.
bigdecimal.workspace = true
chrono.workspace = true
# Serde for serializing/deserializing.
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true

# AWS SDK dependencies.
aws-config = "0.55.3"
aws-sdk-s3 = "0.27.0"

# Tokio runtime.
tokio = { version = "1.28", features = ["full"] }

alloy-provider = { version = "=0.8.0", features = [
    "reqwest",
    "ws",
    "ipc",
    "trace-api",
] }
alloy-rpc-types-eth = { version = "=0.8.0" }
alloy-primitives = { version = "0.8" }
alloy-sol-types = { version = "0.8" }
reqwest = "0.12.12"

pump = { path = "../pump" }
