[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
pump.workspace = true

# webserver
axum.workspace = true
tokio.workspace = true
tower-http = { version = "0.4.4", features = ["cors"] }

# db
diesel.workspace = true
r2d2.workspace = true
bigdecimal.workspace = true
chrono.workspace = true

dotenv.workspace = true
env_logger.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

# AWS
aws-config = "0.55.3"
aws-sdk-s3 = "0.27.0"

# web3
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
